[package]
name = "filigree-cli"
version = "0.0.1"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
description = "Scaffolding utility for the Filigree web application framework"
repository = "https://github.com/dimfeld/filigree"
homepage = "https://github.com/dimfeld/filigree"
documentation = "https://docs.rs/filigree"

[[bin]]
name = "filigree"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.17.2"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
convert_case = "0.6.0"
dialoguer = "0.11.0"
diffy = "0.3.0"
error-stack = "0.4.1"
glob = "0.3.1"
ignore = "0.4.21"
itertools = "0.12.0"
rayon = "1.8.0"
rust-embed = { version = "8.1.0", features = ["interpolate-folder-path"] }
semver = "1.0.21"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive_default = "0.1.1"
serde_json = "1.0.108"
sql-migration-sim = { version = "0.1.1", path = "../sql-migration-sim" }
tera = "1.19.1"
thiserror = "1.0.50"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
