[package]
name = "filigree-cli"
version = "0.4.0"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
description = "Scaffolding utility for the Filigree web application framework"
repository = "https://github.com/dimfeld/filigree"
homepage = "https://github.com/dimfeld/filigree"
documentation = "https://docs.rs/filigree"

[[bin]]
name = "filigree"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.17.2"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
convert_case = "0.6.0"
dialoguer = "0.11.0"
diffy = "0.3.0"
error-stack = "0.4.1"
filigree = { version = "0.4.0", path = "../filigree", default-features = false, features = ["filigree-cli"] }
glob = "0.3.1"
ignore = "0.4.22"
indoc = "2.0.5"
itertools = "0.12.1"
pathdiff = "0.2.1"
rand = "0.8.5"
rayon = "1.9.0"
regex = "1.10.3"
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path"] }
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive_default = "0.1.1"
serde_json = "1.0.114"
serde_with = "3.9.0"
sql-migration-sim = { version = "0.1.6", path = "../sql-migration-sim" }
tera = "1.19.1"
thiserror = "1.0.57"
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }
