[package]
name = "filigree"
version = "0.0.1"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
description = "Filigree web application framework"
repository = "https://github.com/dimfeld/filigree"
homepage = "https://github.com/dimfeld/filigree"
documentation = "https://docs.rs/filigree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
async-trait = "0.1.74"
axum = { version = "0.7.3", features = ["macros", "tracing"] }
axum-extra = { version = "0.9.0", features = ["multipart", "form", "typed-header"] }
axum-jsonschema = "0.8.0"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.12", features = ["derive"] }
css-inline = { version = "0.12.0", default-features = false }
error-stack = "0.4.1"
form_urlencoded = "1.2.1"
futures = "0.3.30"
hyper = { version = "1.1.0", features = ["server", "http1"] }
jsonschema = { version = "0.17.1", default-features = false }
log = { version = "0.4.20", optional = true }
oauth2 = { version = "4.4.2", features = ["reqwest"] }
opentelemetry = { version = "0.21.0", optional = true }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.14.0", optional = true }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"], optional = true }
reqwest = { version = "0.11.23", features = ["json", "cookies"] }
rust-embed = "8.2.0"
schemars = { version = "0.8.16", features = ["chrono", "uuid1"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.15"
sha3 = "0.10.8"
sqlx = { version = "0.7.3", features = ["chrono", "postgres"] }
tera = "1.19.1"
thiserror = "1.0.50"
tokio = { version = "1.35.1", features = ["full"] }
tonic = { version = "0.9.2", default-features = false, features = ["channel"], optional = true }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["full"] }
tower-sessions = { version = "0.7.0", features = ["postgres-store"] }
tracing = "0.1.40"
tracing-error = { version = "0.2.0", optional = true }
tracing-log = { version = "0.2.0", optional = true }
tracing-opentelemetry = { version = "0.22.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
typed-builder = "0.18.0"
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v7"] }

[features]
default = ["tracing", "tracing_honeycomb", "tracing_jaeger", "email_resend"]
tracing = ["dep:log", "dep:tracing-subscriber", "dep:tracing-error", "dep:tracing-log"]
opentelemetry = ["tracing", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
tracing_honeycomb = ["tracing", "opentelemetry", "dep:tonic", "dep:opentelemetry-otlp"]
tracing_jaeger = ["tracing", "opentelemetry", "dep:opentelemetry-jaeger"]
email_provider = []
email_resend = ["email_provider"]
test_slow = []
test_password = []

[dev-dependencies]
indoc = "2.0.4"

