[package]
name = "filigree"
version = "0.0.2"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
description = "Filigree web application framework"
repository = "https://github.com/dimfeld/filigree"
homepage = "https://github.com/dimfeld/filigree"
documentation = "https://docs.rs/filigree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["macros", "tracing"] }
axum-extra = { version = "0.9.2", features = ["multipart", "form", "typed-header"] }
axum-jsonschema = "0.8.0"
base64 = "0.21.7"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
css-inline = { version = "0.12.0", default-features = false }
error-stack = "0.4.1"
form_urlencoded = "1.2.1"
futures = "0.3.30"
hyper = { version = "1.2.0", features = ["server", "http1"] }
jsonschema = { version = "0.17.1", default-features = false }
log = { version = "0.4.21", optional = true }
oauth2 = { version = "4.4.2", features = ["reqwest"] }
opentelemetry = { version = "0.21.0", optional = true }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.14.0", optional = true }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"], optional = true }
reqwest = { version = "0.11.24", features = ["json", "cookies"] }
rust-embed = "8.3.0"
schemars = { version = "0.8.16", features = ["chrono", "uuid1"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_path_to_error = "0.1.15"
sha3 = "0.10.8"
sqlx = { version = "0.7.3", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
tera = "1.19.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.9.2", default-features = false, features = ["channel"], optional = true }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-error = { version = "0.2.0", optional = true }
tracing-log = { version = "0.2.0", optional = true }
tracing-opentelemetry = { version = "0.22.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
typed-builder = "0.18.1"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde", "v7"] }

[features]
default = ["tracing", "tracing_honeycomb", "tracing_jaeger", "email_provider_resend"]
tracing = ["dep:log", "dep:tracing-subscriber", "dep:tracing-error", "dep:tracing-log"]
opentelemetry = ["tracing", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
tracing_honeycomb = ["tracing", "opentelemetry", "dep:tonic", "dep:opentelemetry-otlp"]
tracing_jaeger = ["tracing", "opentelemetry", "dep:opentelemetry-jaeger"]
email_provider = []
email_provider_resend = ["email_provider"]
test_slow = []
test_password = []

[dev-dependencies]
indoc = "2.0.4"

