[package]
name = "sql-migration-sim"
version = "0.1.2"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
description = "Parse and simulate SQL DDL statements"
repository = "https://github.com/dimfeld/filigree"
homepage = "https://github.com/dimfeld/filigree"
documentation = "https://docs.rs/sql-migration-sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", optional = true }
sqlparser = "0.43.1"
thiserror = "1.0.56"

[features]
default = []
serde = ["dep:serde", "sqlparser/serde"]
