[package]
name = "filigree-test-app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "test-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
axum = { version = "0.7.3", features = ["tokio", "http1", "http2", "macros"] }
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenvy = "0.15.7"
error-stack = "0.4.1"
eyre = "0.6.11"
filigree = { version = "0.0.1", path = "../filigree" }
futures = "0.3.30"
hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["chrono", "postgres"] }
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["full"] }
tower-sessions = { version = "0.7.0", features = ["postgres-store"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
uuid = "1.6.1"
