[package]
name = "filigree-test-app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "test-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.75"
axum = { version = "0.7.3", features = ["tokio", "http1", "http2", "macros"] }
axum-extra = { version = "0.9.2", features = ["query"] }
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenvy = "0.15.7"
error-stack = "0.4.1"
eyre = "0.6.11"
filigree = { version = "0.0.1", path = "../filigree" }
futures = "0.3.30"
http = "1.0.0"
hyper = { version = "1.1.0", features = ["server", "http1", "http2"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.11.23", features = ["cookies", "json"] }
rust-embed = "8.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["chrono", "postgres"] }
tera = "1.19.1"
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
uuid = "1.6.1"

[features]
test_password = []
