[package]
name = "filigree-test-app"
edition = "2021"
version = "0.0.0"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "test-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["tokio", "http1", "http2", "macros"] }
axum-extra = { version = "0.9.2", features = ["query"] }
axum-jsonschema = "0.8.0"
axum-sqlx-tx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
blake3 = { version = "1.5.1", features = ["traits-preview"] }
bytes = "1.5.0"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive", "env"] }
digest = "0.10.7"
dotenvy = "0.15.7"
error-stack = { version = "0.4.1", features = ["spantrace"] }
eyre = "0.6.12"
filigree = { version = "0.0.2", path = "../filigree" }
futures = "0.3.30"
http = "1.0.0"
hyper = { version = "1.2.0", features = ["server", "http1", "http2"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.11.24", features = ["cookies", "json"] }
rust-embed = "8.3.0"
schemars = { version = "0.8.16", features = ["chrono", "url", "uuid1"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = { version = "3.6.1", features = ["json", "schemars_0_8"] }
sqlx = { version = "0.7.3", features = ["chrono", "postgres"] }
sqlx-transparent-json-decode = "2.2.0"
tera = "1.19.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
url = "2.5.0"
uuid = "1.7.0"

[features]
test_password = []
